@@ -1,0 +1,7 @@
+#include <stdlib.h>
+#include "armsim.h"
+
+int main() {
+  printf("%d\n%d\n",atoi("0"),atoi("1982"));
+  return 0;
+}
