@@ -1,0 +1,4 @@
+int main() { 
+  asm("b foo\nfoo:");
+  return 0;
+}
