@@ -1,5 +1,5 @@
 #include "armsim.h"
 int main(int argc, char *argv[]) {
-  printf("%d\n",argc);
+  printf("%d\n%s\n%s\n",argc+1,argv[0],argv[1]);
   return 0;
 }
