@@ -1,0 +1,2 @@
+	SWI &14
+	OUTB R0
